STOP WRAPPING ON MOBILE IT DOESN'T MAKE ANY SENSE

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .social-icons {
-	width: 200px;
+	width: 220px;
 }
 
 ul.social-slide a {
